# polychat-c-abi-plugin-system

./: Cargo.toml  LICENSE  build.rs  cbindgen.toml
.github/workflows/: ci.yaml  deploy.yaml
src/: lib.rs
src/initialized_plugin/: mod.rs
src/plugin/: api_version.rs  auth_method.rs  auth_result.rs  conversation.rs  conversation_type.rs  core_interface.rs  field.rs  field_type.rs  init_plugin.rs  message.rs  mod.rs  plugin_info.rs  polychat_api.rs  send_status.rs  team.rs
src/plugin_info/: api_version.rs  mod.rs
src/types/: mod.rs
