[package]
name = "polychat-plugin"
version = "0.3.1"
edition = "2018"

description = "A library containing types required to make a polychat plugin"
license = "MIT"
repository = "https://github.com/polysoft1/polychat-plugin"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = ["dylib", "rlib"]

[dependencies]
libc = "0.2.113"
log = "0.4.14"

[build-dependencies]
cbindgen = "0.20.0"